--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
 # Local Elasticsearch config
 spring.data.elasticsearch.repositories.enabled=true
-elasticsearch.host=127.0.0.1
-elasticsearch.port=9300
-elasticsearch.cluster-name=quest_lookup_cs_default
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-name=my_cluster
+
+elasticsearch.index.name=my_index
+elasticsearch.user.type=user
 
 # App config
 server.port=8102
